--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,9 @@
-<p>
-  login works!
-</p>
+<form (submit)="loginUser($event)">
+  <input type="text" placeholder="Username">
+  <input type="password" placeholder="Password">
+  <input type="submit" value="submit">
+  <button type="submit">
+  </button>
+
+</form>
+
